# flats_scraper

./: .gitignore  Dockerfile  README.md  docker-compose.yml
scraper/: Cargo.toml
scraper/src/: all_districts.rs  main.rs
scraper/src/scrape_flats/: districts.rs  flats.rs  mod.rs  structs.rs  utils.rs
