[package]
authors = ["Daniils Firgers <dfirger@gmail.com>"]
edition = "2021"
name = "ads-scraper-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json", "blocking"]}
scraper = "0.12.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.15", features = ["full"]}

[[bin]]
name = "ads-scraper-app"
path = "src/all_districts.rs"
